# minisellpos_test

./: CMakeLists.txt  MINISELL_V01.spec  README.md
libs/: ConfigDto.hpp  PageDto.hpp  StatusDto.hpp
resources/: config.json
src/: App.cpp  AppComponent.hpp  DatabaseComponent.hpp  ErrorHandler.cpp  ErrorHandler.hpp  ServiceComponent.hpp  Tools.cpp  Tools.hpp
src/compras/: controller.hpp  db.hpp  dto.hpp  service.cpp  service.hpp
src/inventario/: controller.hpp  db.hpp  dto.hpp  service.cpp  service.hpp
src/licencia/: controller.hpp  db.hpp  dto.hpp  service.cpp  service.hpp
src/login/: authMiddleware.hpp  controller.hpp  db.hpp  service.cpp  service.hpp
src/perfiles/: controller.hpp  db.hpp  dto.hpp  service.cpp  service.hpp
src/usuarios/: controller.hpp  db.hpp  dto.hpp  service.cpp  service.hpp
src/ventas/: controller.hpp  db.hpp  dto.hpp  service.cpp  service.hpp
test/: tests.cpp
thunder-tests/: thunderActivity.json
thunder-tests/collections/: tc_col_getminisell.json  tc_col_postminisell.json
